feat: polish installation page

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
-doctype html
-html
-    head
-        title Swingletree
-    body
-        h1 Hi, there!
-        p Swingletree is ready to go.
+extends base
+
+block content
+    div(class="container")
+        div(class="jumbotron")
+            h1 Hi, there!
+            p(class="lead") Your Swingletree is ready to go.
