--- a/views/index.pug
+++ b/views/index.pug
@@ -7,15 +7,18 @@ block content
                 h1 Hi, there!
                 p(class="lead") Your Swingletree is ready to go.
 
+                hr
+
+                p For more information about what to do next you can take a look into the project's #[a(href="https://github.com/error418/swingletree/blob/master/README.md") Readme].
+
             div(class="col-md-3")
-                div(class={"card text-white": true, "bg-danger": unhealthy > 0, "bg-success": unhealthy == 0})
-                    div(class="card-header")
-                        if unhealthy > 0
-                            i(class="fas fa-exclamation-triangle mr-2")
-                        else
-                            i(class="fas fa-check-circle mr-2")
-                        span Database clients
-                    if unhealthy > 0
-                        div(class="card-body")
-                            p(class="card-text") 
-                                    span #{unhealthy} of #{connections} failing
+                div(class="card bg-light")
+                    div(class="card-header") Service Health
+                    div(class="card-body")
+                        ul(class="list-unstyled")
+                            li(data-toggle="tooltip" data-placement="right" title=unhealthy + " of " + connections + " failing")
+                                if unhealthy > 0
+                                    i(class="fas fa-database mr-2 text-danger")
+                                else
+                                    i(class="fas fa-database mr-2 text-success")
+                                span Database
