chore: add site icon

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,13 +3,14 @@ extends base
 block content
     div(class="container")
         div(class="row")
-            div(class="jumbotron col-md-9")
-                h1 Hi, there!
-                p(class="lead") Your Swingletree is ready to go.
+            div(class="col-md-9")
+                div(class="jumbotron")
+                    h1 Hi, there!
+                    p(class="lead") Your Swingletree is ready to go.
 
-                hr
+                    hr
 
-                p For more information about what to do next you can take a look into the project's #[a(href="https://github.com/error418/swingletree/blob/master/README.md") Readme].
+                    p For more information about what to do next you can take a look into the project's #[a(href="https://github.com/error418/swingletree/blob/master/README.md") Readme].
 
             div(class="col-md-3")
                 div(class="card bg-light")
