--- a/views/base.pug
+++ b/views/base.pug
@@ -12,7 +12,10 @@ html
 
     body(style="padding-top:5rem")
         nav(class="navbar navbar-dark bg-dark fixed-top")
-            a(class="navbar-brand" href="#") Swingletree
+            a(class="navbar-brand" href="#")
+                img(src="./static/icon.svg" width="30" height="30" class="mr-2 d-inline-block align-top" alt="")
+                .
+                    Swingletree
 
             ul(class="navbar-nav")
                 a(class="nav-link" href="https://github.com/error418/swingletree")
