chore: add favicon set

--- a/views/base.pug
+++ b/views/base.pug
@@ -8,6 +8,16 @@ html
         link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/brands.css" integrity="sha384-VGCZwiSnlHXYDojsRqeMn3IVvdzTx5JEuHgqZ3bYLCLUBV8rvihHApoA1Aso2TZA" crossorigin="anonymous")
         link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/fontawesome.css" integrity="sha384-GVa9GOgVQgOk+TNYXu7S/InPTfSDTtBalSgkgqQ7sCik56N9ztlkoTr2f/T44oKV" crossorigin="anonymous")
 
+        link(rel="apple-touch-icon" sizes="180x180" href="./static/icon/apple-touch-icon.png")
+        link(rel="icon" type="image/png" sizes="32x32" href="./static/icon/favicon-32x32.png")
+        link(rel="icon" type="image/png" sizes="16x16" href="./static/icon/favicon-16x16.png")
+        link(rel="manifest" href="./static/icon/site.webmanifest")
+        link(rel="mask-icon" href="./static/icon/safari-pinned-tab.svg" color="#5bbad5")
+        link(rel="shortcut icon" href="./static/icon/favicon.ico")
+        meta(name="msapplication-TileColor" content="#da532c")
+        meta(name="msapplication-config" content="./static/icon/browserconfig.xml")
+        meta(name="theme-color" content="#ffffff")
+
         meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 
     body(style="padding-top:5rem")
