--- a/views/base.pug
+++ b/views/base.pug
@@ -45,11 +45,14 @@ html
                             a(class="nav-link" data-toggle="popover" data-placement="bottom" title="Service information")
                                 i(class="fas fa-fw mr-1 fa-exclamation-circle text-warning")
                                 span(id="health-po-content" style="display:none")
+                                    span Swingletree detected issues which may lead to a service interruption
+                                    hr
                                     ul(class="list-unstyled" style="margin:0px")
                                         li 
                                             i(class="fas fa-fw mr-1 fa-exclamation text-danger")
                                             .
                                                 #{unhealthy} of #{connections} database connections failing
+                                        
                     li(class="nav-item")
                         a(class="nav-link" href="https://github.com/error418/swingletree")
                             i(class="fab fa-fw mr-1 fa-github")
