--- a/views/base.pug
+++ b/views/base.pug
@@ -30,7 +30,7 @@ html
     body(style="padding-top:5rem")
         nav(class="navbar navbar-expand-md navbar-dark bg-dark fixed-top")
             div(class="container")
-                a(class="navbar-brand mr-3" href="#")
+                a(class="navbar-brand mr-3" href="./")
                     img(src="./static/icon.svg" width="30" height="30" class="mr-2 d-inline-block align-top" alt="")
                     .
                         Swingletree
@@ -56,7 +56,12 @@ html
                                             i(class="fas fa-fw mr-1 fa-exclamation text-danger")
                                             .
                                                 #{unhealthy} of #{connections} database connections failing
-                                        
+                    li(class="nav-item")
+                        a(class="nav-link" href="./code")
+                            i(class="fas fa-fw mr-1 fa-code")
+                            .
+                                Snippets
+                    
                     li(class="nav-item")
                         a(class="nav-link" href="https://github.com/error418/swingletree")
                             i(class="fab fa-fw mr-1 fa-github")
