--- a/views/code.pug
+++ b/views/code.pug
@@ -7,7 +7,9 @@ block content
         h2 Code Snippets
 
         p.
-          asdads
+          Following code snippets are meant to give you a kickstart and a feeling of how to utilize Swingletree
+          in your builds.
+
 
         ul(class="nav nav-tabs code-select")
 
@@ -24,11 +26,11 @@ block content
 
           div.maven(style="display:none")
             include:code(lang='xml') code/maven.txt
-            .
-              The build needs to be started providing the parameters for commit id and repository name.
 
           div.bash(style="display:none")
             include:code(lang='bash') code/bash.txt
+
+        hr
   
   script
     include assets/code.js
