feat(health): improve swingletree health checks

--- a/views/base.pug
+++ b/views/base.pug
@@ -49,14 +49,15 @@ html
                             a(class="nav-link" data-toggle="popover" data-placement="bottom" title="Service information")
                                 i(class="fas fa-fw mr-1 fa-exclamation-circle text-warning")
                                 span(id="health-po-content" style="display:none")
-                                    span Swingletree detected issues which may lead to a service interruption
+                                    span Swingletree has detected issues which may lead to a service interruption
                                     hr
                                     ul(class="list-unstyled" style="margin:0px")
                                         each health in healthStates
                                             li 
                                                 i(class="fas fa-fw mr-1 fa-exclamation text-danger")
                                                 .
-                                                    #{health.service}: #{health.detail}
+                                                    #[b #{health.service}:]
+                                                    #{health.detail}
                     li(class="nav-item")
                         a(class="nav-link" href="./code")
                             i(class="fas fa-fw mr-1 fa-code")
