--- a/views/base.pug
+++ b/views/base.pug
@@ -25,7 +25,8 @@ html
 
         script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
         script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous")
-        script $(function () { $('[data-toggle="tooltip"]').tooltip(); $('[data-toggle="popover"]').popover({content: $('#health-po-content').html(), html: true}) });
+        script
+            include assets/base.js
 
     body(style="padding-top:5rem")
         nav(class="navbar navbar-expand-md navbar-dark bg-dark fixed-top")
@@ -57,7 +58,8 @@ html
                                                 i(class="fas fa-fw mr-1 fa-exclamation text-danger")
                                                 .
                                                     #[b #{health.service}:]
-                                                    #{health.detail}
+                                                div(style="padding-left:1.5em") #{health.detail}
+                                                div.muted(x-relative-date=health.timestamp)
                     li(class="nav-item")
                         a(class="nav-link" href="./code")
                             i(class="fas fa-fw mr-1 fa-code")
