--- a/docs/_includes/header-banner.html
+++ b/docs/_includes/header-banner.html
@@ -1,8 +1,8 @@
 <!-- main -->
 <div class="header-container jumbotron">
     <div class="container">
-        <h1>Integrate SonarQube into GitHub</h1>
-        <p>See SonarQube findings inside your Pull Requests.</p>
+        <h1>Simplify your build feedback</h1>
+        <p>Add your build reports to your Commits and Pull Requests. See what's going on at one glance without leaving GitHub.</p>
 
         <ul class="list-inline">
 {%- unless page.id == "showcase" -%}
