--- a/views/overview.pug
+++ b/views/overview.pug
@@ -1,27 +1,27 @@
 extends base
 
 block content
-  div(class="container", id="app" v-cloak)
-    div(class="row", v-for="item in builds")
-      span(class="badge badge-primary") {{ item.sender }}
-      span(class="badge badge-light") {{ item.org }}
-      span(class="badge badge-light") {{ item.repo }}
-      span(class="badge badge-light") {{ item.sha }}
-      span(class="badge badge-light") {{ item.branch }}
+  div(class="container", id="app")
+    each build in builds.hits.hits
+      div(class="row build-item")
+        div(class="build-icon col-md-1")
+          span(class=`fas fa-shield-alt fa-3x fa-fw icon ${build._source.checkStatus.toLowerCase()}`)
 
+        div(class="col-md-11 build-info")
 
+          div(class="header")
+            span(class="sender-name") #{build._source.sender}
 
-  script(
-    src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"
-    integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs="
-    crossorigin="anonymous"
-  )
+            div(class="status") 
+              span #{ build._source.checkStatus } 
+              if build._source.timestamp
+                span(class="timestamp") #{ moment(build._source.timestamp).fromNow() }
+              endif
 
-  script(
-    src="https://cdn.jsdelivr.net/npm/vue@2.6.10"
-    integrity="sha384-8t+aLluUVnn5SPPG/NbeZCH6TWIvaXIm/gDbutRvtEeElzxxWaZN+G/ZIEdI/f+y"
-    crossorigin="anonymous"
-  )
-  
-  script
-    include assets/overview.js
+          div(class="coordinates")
+            span(class="org") #{build._source.org}
+            span(class="repo") #{build._source.repo}
+            span(class="sha") #{ build._source.sha.substring(0,5) }
+          span(class="badge badge-light branch") #{build._source.branch}
+          
+
