--- a/views/base.pug
+++ b/views/base.pug
@@ -22,8 +22,7 @@ html
 
         script(src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous")
         script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" integrity="sha384-pjaaA8dDz/5BgdFUPX6M/9SUZv4d12SUPF0axWc+VRZkx5xU3daN+lYb49+Ax+Tl" crossorigin="anonymous")
-        script
-            include assets/base.js
+        script(src=`${ basePath }/static/js/base.js`)
 
     body(style="padding-top:5rem")
         nav(class="navbar navbar-dark bg-dark navbar-expand-md fixed-top")
@@ -40,7 +39,7 @@ html
                             .
                                 Install
                     if isBuildHistoryEnabled
-                        a(class="nav-link" href="/builds/")
+                        a(class=`nav-link ${path.endsWith('/builds/') ? 'active' : '' }` href="/builds/")
                             .
                                 Builds
             
@@ -59,7 +58,7 @@ html
                                             .
                                                 #[b #{health.service}:]
                                             div(style="padding-left:1.5em") #{health.detail}
-                                            div.muted(x-relative-date=health.timestamp)
+                                            div.muted(x-relative-date) #{ moment(health.timestamp).fromNow() }
                 li(class="nav-item")
                     a(class="nav-link" href="./code")
                         i(class="fas fa-fw mr-1 fa-code")
@@ -71,6 +70,5 @@ html
                         i(class="fab fa-fw mr-1 fa-github")
                         .
                             GitHub
-                            
-        
+
         block content
